fixed minor spacing issue w/ piechart

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
   padding: 14px;
   text-align: center;*/
 
-position: absolute;
+  /*position: absolute;
       width: 200px;
       height: auto;
       padding: 10px;
@@ -73,7 +73,7 @@ position: absolute;
       -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
       -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
       box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-      pointer-events: none;
+      pointer-events: none;*/
 
 
 
@@ -105,7 +105,7 @@ position: absolute;
      overflow: hidden;
 }
 
-/* Piechart Tooltip */
+
 #tooltip {
       position: absolute;
       margin-bottom: 50px;
@@ -138,8 +138,14 @@ position: absolute;
     font-size: 12px;
   }
 
+
+
+
+/* Piechart */
 .chart {
   position: absolute;
+  width: 300px;
+  height: 300px;
 }
 
 
